# BuzzQtExtension

./: .gitignore  BuzzQtExtension.pyproject  LICENSE  README.md  pyproject.toml
examples/: PasswordDialog.py
src/BuzzQtExtension/: QPasswordLineEdit.py  QPasswordWidgets.py
src/BuzzQtExtension/res/ui/: resource.qrc  resource_rc.py
src/tools/: compile_ui.py
tests/: no_taskbar.py  password.py
tools/: compile_ui.py
